--- a/phone/src/main/res/values/strings.xml
+++ b/phone/src/main/res/values/strings.xml
@@ -27,12 +27,12 @@
     <string name="chronometer_total">Total</string>
     <string name="seconds">Seconds</string>
     <string name="interval_timer">Interval Timer</string>
-    <string name="total_remaining">Total Remaining</string>
+    <string name="total_remaining">Remaining</string>
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
 
     <!--Info Interval Fragment -->
-    <string name="Rounds">Rounds</string>
+    <string name="Round">Round</string>
     <string name="Mode">Mode</string>
     <string name="Resting">Resting</string>
     <string name="Running">Running</string>
