[phone] -Organize the code -Add hdpi resolution -Replace the empty closeImage button for a cross image. -Fixes
[Wear]
-Change seconds manipulation.

--- a/phone/src/main/res/values/strings.xml
+++ b/phone/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name_menu_title">Ludus XII</string>
     <string name="app_name_menu_subtitle">HiiT</string>
-    <string name="app_name">Ludus XII Hiit</string>
+    <string name="app_name">FiThletics Interval</string>
     <string name="tabata">Tabata</string>
 
     <!-- Sections name -->
