--- a/phone/src/main/res/values/strings.xml
+++ b/phone/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <!-- Main Fragment -->
     <string name="last_intervals">Last Intervals</string>
     <string name="interval">Interval</string>
-    <string name="active_sound">Sound Activated</string>
-    <string name="vibration_activate">Vibration Activated</string>
+    <string name="active_sound">Sound</string>
+    <string name="vibration_activate">Vibration</string>
 
     <!-- Chronometer Fragment -->
     <string name="chronometer_total">Total</string>
@@ -47,5 +47,124 @@
     <string name="notification_Round">Round:</string>
     <string name="notification_Interval_time">Interval Time:</string>
     <string name="notification_Total_time">Total Time:</string>
+
+    <!--Intervals Types -->
+    <string name="interval_30secondSprint_name">30 Seconds Sprint</string>
+    <string name="interval_30secondSprint_description"> 30 seconds of sprint
+        \n 2 Minutes of rest
+        \n 4 Times</string>
+
+    <string name="interval_tabata_name">Tabata</string>
+    <string name="interval_tabata_description">20 seconds of intense training\n
+        10 Seconds of rest\n
+         8 Times</string>
+
+    <string name="interval_HiitSprint_Beginner_name">Hiit Sprint Beginner</string>
+    <string name="interval_HiitSprint_Beginner_description">10 seconds of effort\n
+        30 Seconds of rest\n
+        3 Times</string>
+
+    <string name="interval_HiitSprint_Begin_Intermediate_name">Hiit Sprint
+        Begin-Intermediate</string>
+    <string name="interval_HiitSprint_Begin_Intermediate_description">10 seconds of effort\n
+        30 Seconds of rest\n
+        5 Times</string>
+
+    <string name="interval_HiitSprint_Intermediate_name">Hiit Sprint Intermediate</string>
+    <string name="interval_HiitSprint_Intermediate_description">10 seconds of effort\n
+        30 Seconds of rest\n
+        7 Times</string>
+
+    <string name="interval_HiitSprint_Inter_Advanced_name">Hiit Sprint Inter-Advanced</string>
+    <string name="interval_HiitSprint_Inter_Advanced_description">10 seconds of effort\n
+        30 Seconds of rest\n
+        9 Times</string>
+
+    <string name="interval_HiitSprint_Advanced_name">Hiit Sprint Advanced</string>
+    <string name="interval_HiitSprint_Advanced_description">10 seconds of effort\n
+        30 Seconds of rest\n
+        11 Times</string>
+ <!--Alactic-->
+    <string name="interval_HiitAlactic_Beginner_name">Hiit Alactic Beginner</string>
+    <string name="interval_HiitAlactic_Beginner_description">20 seconds of effort\n
+        90 Seconds of rest\n
+        3 Times</string>
+
+    <string name="interval_HiitAlactic_Begin_Intermediate_name">Hiit Alactic
+        Begin-Intermediate</string>
+    <string name="interval_HiitAlactic_Begin_Intermediate_description">20 seconds of effort\n
+        90 Seconds of rest\n
+        6 Times</string>
+
+    <string name="interval_HiitAlactic_Intermediate_name">Hiit Alactic Intermediate</string>
+    <string name="interval_HiitAlactic_Intermediate_description">20 seconds of effort\n
+        60 Seconds of rest\n
+        6 Times</string>
+
+    <string name="interval_HiitAlactic_Inter_Advanced_name">Hiit Alactic Inter-Advanced</string>
+    <string name="interval_HiitAlactic_Inter_Advanced_description">20 seconds of effort\n
+        30 Seconds of rest\n
+        5 Times</string>
+
+    <string name="interval_HiitAlactic_Advanced_name">Hiit Alactic Advanced</string>
+    <string name="interval_HiitAlactic_Advanced_description">20 seconds of effort\n
+        30 Seconds of rest\n
+        8 Times</string>
+
+    <!--Power-->
+    <string name="interval_HiitPower_Beginner_name">Hiit Power Beginner</string>
+    <string name="interval_HiitPower_Beginner_description">5 seconds of effort\n
+        30 Seconds of rest\n
+        3 Times</string>
+
+    <string name="interval_HiitPower_Begin_Intermediate_name">Hiit Power
+        Begin-Intermediate</string>
+    <string name="interval_HiitPower_Begin_Intermediate_description">5 seconds of effort\n
+        30 Seconds of rest\n
+        5 Times</string>
+
+    <string name="interval_HiitPower_Intermediate_name">Hiit Power Intermediate</string>
+    <string name="interval_HiitPower_Intermediate_description">5 seconds of effort\n
+        30 Seconds of rest\n
+        9 Times</string>
+
+    <string name="interval_HiitPower_Inter_Advanced_name">Hiit Power Inter-Advanced</string>
+    <string name="interval_HiitPower_Inter_Advanced_description">5 seconds of effort\n
+        30 Seconds of rest\n
+        12 Times</string>
+
+    <string name="interval_HiitPower_Advanced_name">Hiit Power Advanced</string>
+    <string name="interval_HiitPower_Advanced_description">5 seconds of effort\n
+        30 Seconds of rest\n
+        15 Times</string>
+
+    <!--Endurance-->
+    <string name="interval_HiitEndurance_Beginner_name">Hiit Endurance Beginner</string>
+    <string name="interval_HiitEndurance_Beginner_description">50 seconds of effort\n
+        90 Seconds of rest\n
+        3 Times</string>
+
+    <string name="interval_HiitEndurance_Begin_Intermediate_name">Hiit Endurance
+        Begin-Intermediate</string>
+    <string name="interval_HiitEndurance_Begin_Intermediate_description">50 seconds of effort\n
+        90 Seconds of rest\n
+        6 Times</string>
+
+    <string name="interval_HiitEndurance_Intermediate_name">Hiit Endurance Intermediate</string>
+    <string name="interval_HiitEndurance_Intermediate_description">50 seconds of effort\n
+        60 Seconds of rest\n
+        6 Times</string>
+
+    <string name="interval_HiitEndurance_Inter_Advanced_name">Hiit Endurance Inter-Advanced</string>
+    <string name="interval_HiitEndurance_Inter_Advanced_description">50 seconds of effort\n
+        60 Seconds of rest\n
+        9 Times</string>
+
+    <string name="interval_HiitEndurance_Advanced_name">Hiit Endurance Advanced</string>
+    <string name="interval_HiitEndurance_Advanced_description">50 seconds of effort\n
+        60 Seconds of rest\n
+        12 Times</string>
+
+
 
 </resources>
