[shared] -Add a new library. This library is shared instead phone  and wear app. -Create a method to safe the intervals in a file using json [utils] -Add a new library for generic utils. -Create a primitive sliding Menu [phone] -Implemented a sliding menu. -Implemented a lot of Hiit Modes. -Little fix errors.
[wear]
-Now android wear app should refresh correctly.
-Added android wear circle mode (New testing).
-New UI for square watches.
-The train type should be show.

--- a/phone/src/main/res/values/strings.xml
+++ b/phone/src/main/res/values/strings.xml
@@ -33,14 +33,14 @@
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
 
-    <!--Info Interval Fragment -->
+    <!-- Info Interval Fragment -->
     <string name="Round">Round</string>
     <string name="Mode">Mode</string>
     <string name="Resting">Resting</string>
     <string name="Running">Running</string>
     <string name="nothing">Nothing</string>
 
-    <!--NotificationInterval -->
+    <!-- NotificationInterval -->
     <string name="Pause">Pause</string>
     <string name="Resume">Pause</string>
     <string name="Cancel">Cancel</string>
@@ -48,123 +48,114 @@
     <string name="notification_Interval_time">Interval Time:</string>
     <string name="notification_Total_time">Total Time:</string>
 
-    <!--Intervals Types -->
+
+    <!--Interval Editor -->
+    <string name="IE_nameInterval">Name of interval:</string>
+    <string name="IE_description">Description of interval:</string>
+    <string name="IE_secondsEffort">Seconds of effort:</string>
+    <string name="IE_secondsRest">Seconds of rest:</string>
+    <string name="IE_back">Back</string>
+    <string name="IE_save">Save</string>
+
+    <!-- Intervals Types -->
     <string name="interval_30secondSprint_name">30 Seconds Sprint</string>
     <string name="interval_30secondSprint_description"> 30 seconds of sprint
         \n 2 Minutes of rest
         \n 4 Times</string>
-
     <string name="interval_tabata_name">Tabata</string>
     <string name="interval_tabata_description">20 seconds of intense training\n
         10 Seconds of rest\n
          8 Times</string>
-
     <string name="interval_HiitSprint_Beginner_name">Hiit Sprint Beginner</string>
     <string name="interval_HiitSprint_Beginner_description">10 seconds of effort\n
         30 Seconds of rest\n
         3 Times</string>
-
     <string name="interval_HiitSprint_Begin_Intermediate_name">Hiit Sprint
         Begin-Intermediate</string>
     <string name="interval_HiitSprint_Begin_Intermediate_description">10 seconds of effort\n
         30 Seconds of rest\n
         5 Times</string>
-
     <string name="interval_HiitSprint_Intermediate_name">Hiit Sprint Intermediate</string>
     <string name="interval_HiitSprint_Intermediate_description">10 seconds of effort\n
         30 Seconds of rest\n
         7 Times</string>
-
     <string name="interval_HiitSprint_Inter_Advanced_name">Hiit Sprint Inter-Advanced</string>
     <string name="interval_HiitSprint_Inter_Advanced_description">10 seconds of effort\n
         30 Seconds of rest\n
         9 Times</string>
-
     <string name="interval_HiitSprint_Advanced_name">Hiit Sprint Advanced</string>
     <string name="interval_HiitSprint_Advanced_description">10 seconds of effort\n
         30 Seconds of rest\n
         11 Times</string>
- <!--Alactic-->
+    <!-- Alactic -->
     <string name="interval_HiitAlactic_Beginner_name">Hiit Alactic Beginner</string>
     <string name="interval_HiitAlactic_Beginner_description">20 seconds of effort\n
         90 Seconds of rest\n
         3 Times</string>
-
     <string name="interval_HiitAlactic_Begin_Intermediate_name">Hiit Alactic
         Begin-Intermediate</string>
     <string name="interval_HiitAlactic_Begin_Intermediate_description">20 seconds of effort\n
         90 Seconds of rest\n
         6 Times</string>
-
     <string name="interval_HiitAlactic_Intermediate_name">Hiit Alactic Intermediate</string>
     <string name="interval_HiitAlactic_Intermediate_description">20 seconds of effort\n
         60 Seconds of rest\n
         6 Times</string>
-
     <string name="interval_HiitAlactic_Inter_Advanced_name">Hiit Alactic Inter-Advanced</string>
     <string name="interval_HiitAlactic_Inter_Advanced_description">20 seconds of effort\n
         30 Seconds of rest\n
         5 Times</string>
-
     <string name="interval_HiitAlactic_Advanced_name">Hiit Alactic Advanced</string>
     <string name="interval_HiitAlactic_Advanced_description">20 seconds of effort\n
         30 Seconds of rest\n
         8 Times</string>
 
-    <!--Power-->
+    <!-- Power -->
     <string name="interval_HiitPower_Beginner_name">Hiit Power Beginner</string>
     <string name="interval_HiitPower_Beginner_description">5 seconds of effort\n
         30 Seconds of rest\n
         3 Times</string>
-
     <string name="interval_HiitPower_Begin_Intermediate_name">Hiit Power
         Begin-Intermediate</string>
     <string name="interval_HiitPower_Begin_Intermediate_description">5 seconds of effort\n
         30 Seconds of rest\n
         5 Times</string>
-
     <string name="interval_HiitPower_Intermediate_name">Hiit Power Intermediate</string>
     <string name="interval_HiitPower_Intermediate_description">5 seconds of effort\n
         30 Seconds of rest\n
         9 Times</string>
-
     <string name="interval_HiitPower_Inter_Advanced_name">Hiit Power Inter-Advanced</string>
     <string name="interval_HiitPower_Inter_Advanced_description">5 seconds of effort\n
         30 Seconds of rest\n
         12 Times</string>
-
     <string name="interval_HiitPower_Advanced_name">Hiit Power Advanced</string>
     <string name="interval_HiitPower_Advanced_description">5 seconds of effort\n
         30 Seconds of rest\n
         15 Times</string>
 
-    <!--Endurance-->
+    <!-- Endurance -->
     <string name="interval_HiitEndurance_Beginner_name">Hiit Endurance Beginner</string>
     <string name="interval_HiitEndurance_Beginner_description">50 seconds of effort\n
         90 Seconds of rest\n
         3 Times</string>
-
     <string name="interval_HiitEndurance_Begin_Intermediate_name">Hiit Endurance
         Begin-Intermediate</string>
     <string name="interval_HiitEndurance_Begin_Intermediate_description">50 seconds of effort\n
         90 Seconds of rest\n
         6 Times</string>
-
     <string name="interval_HiitEndurance_Intermediate_name">Hiit Endurance Intermediate</string>
     <string name="interval_HiitEndurance_Intermediate_description">50 seconds of effort\n
         60 Seconds of rest\n
         6 Times</string>
-
     <string name="interval_HiitEndurance_Inter_Advanced_name">Hiit Endurance Inter-Advanced</string>
     <string name="interval_HiitEndurance_Inter_Advanced_description">50 seconds of effort\n
         60 Seconds of rest\n
         9 Times</string>
-
     <string name="interval_HiitEndurance_Advanced_name">Hiit Endurance Advanced</string>
     <string name="interval_HiitEndurance_Advanced_description">50 seconds of effort\n
         60 Seconds of rest\n
         12 Times</string>
-
-
+    <string name="title_activity_interval_editor">IntervalEditor</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
